<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".Payment1">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="366dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chndCardDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/insCardDet"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="32dp"
            android:onClick="change"
            android:text="@string/change"
            app:backgroundTint="@color/black"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shippingDet"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/shippingDet"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/change1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="32dp"
            android:text="@string/change"
            app:backgroundTint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="61dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/payNow"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/payNow"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:onClick="deleteData"
            android:text="@string/cancel"
            app:backgroundTint="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>