<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".changePaymentDetails">

    <TextView
        android:id="@+id/upCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardNumber"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputCardNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/upExpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateOfExpire"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputDateExpire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/upSecCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/securityCode"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputSecurityCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardholderName"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputCardNum"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="19"
        app:layout_constraintStart_toEndOf="@+id/upCardNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputDateExpire"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/upExpDate"
        app:layout_constraintTop_toBottomOf="@+id/inputCardNum" />

    <EditText
        android:id="@+id/inputSecurityCode"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="3"
        app:layout_constraintStart_toEndOf="@+id/upSecCode"
        app:layout_constraintTop_toBottomOf="@+id/inputDateExpire" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/inputSecurityCode" />

    <Button
        android:id="@+id/upDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:onClick="updateData"
        android:text="@string/upDetails"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

</androidx.constraintlayout.widget.ConstraintLayout>